--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -131,14 +131,16 @@
   },
   "news": {
     "title": "News",
+    "subtitle": "Stay updated with the latest news and announcements",
     "all_news": "All news",
     "published": "Published on",
     "loading": "Loading...",
     "search_category": "Search by category:",
-    "search_content": "Search by content",
+    "search_content": "Search posts...",
     "no_image": "No image available",
     "no_news": "No blog posts created",
     "no_news_subtitle": "There are currently no blog posts created.",
+    "read_more": "Read more",
     "categories": {
       "all": "All",
       "competitions": "Competitions",
@@ -662,7 +664,7 @@
       },
       "info": "Settings",
       "tables": "Tables",
-      "groups": "Groups",
+      "groups": "Classes",
       "media": "Media",
       "images": "Images",
       "title": "Tournament Hub",
@@ -670,6 +672,11 @@
     },
     "dashboard": {
       "name": "Dashboard",
+      "greeting": {
+        "good_morning": "Good morning",
+        "good_day": "Good day",
+        "good_evening": "Good evening"
+      },
       "missing": "Dashboard unavailable",
       "missing_subtitle": "Dashboard unavailable. Create and manage tournaments to view the dashboard.",
       "total_tournaments": "Total tournaments",
@@ -718,25 +725,25 @@
         "tournament_tables": {
           "single_elimination": "Single Elimination (No bronze)",
           "single_elimination_bronze": "Single Elimination",
-          "double_elimination_full_placement": "Double Elimination Full",
-          "double_elimination_full_placement_top_heavy": "Double Elimination (Semi-final losers for 3rd)",
-          "double_elimination_tabletennis": "Double Elimination (table tennis)",
-          "double_elimination_tabletennis_top_heavy": "Double Elimination (Semi-final losers for 3rd) (table tennis)",
+          "double_elimination_full_placement": "Full Placement (Consolation for bronze)",
+          "double_elimination_full_placement_top_heavy": "Full Placement (Semi-final losers for bronze)",
+          "double_elimination_tabletennis": "Full Placement (Consolation for bronze)",
+            "double_elimination_tabletennis_top_heavy": "Full Placement (Semi-final losers for bronze)",
           "champions_league": "Team Champions League",
           "free_for_all": "Solo Free-for-all",
           "round_robin_full_placement": "Round Robin (Placement matches included)",
           "round_robin": "Round Robin"
         },
         "back": "Back",
-        "edit_group": "Edit Group",
-        "create_group": "Create a Tournament Group",
+        "edit_group": "Edit Class",
+        "create_group": "Create a Tournament Class",
         "woman_weight": "Woman rating weight",
         "woman_weight_description": "Woman rating will be multiplied by this number",
         "title_create": "Create Tournament",
         "title_edit": "Edit Tournament",
-        "title_create_table": "Create Group",
-        "title_edit_table": "Edit Group",
-        "title_delete_table": "Delete Group",
+        "title_create_table": "Create Class",
+        "title_edit_table": "Edit Class",
+        "title_delete_table": "Delete Class",
         "button_create": "Create",
         "button_edit": "Update Tournament",
         "back_button": "Back to Tournaments",
@@ -751,8 +758,8 @@
         "number_of_tables_placeholder": "Enter number of tables",
         "number_of_groups_placeholder": "Enter the number of subgroups",
         "group_amount": "Number of subgroups",
-        "class": "Group",
-        "class_placeholder": "Group name",
+        "class": "Class",
+        "class_placeholder": "Class name",
         "tournament_size": "Tournament Size (amount of participants/teams)",
         "min_team_size": "Minimum Team Size",
         "additional_information": "Additional Information",
@@ -771,8 +778,8 @@
         "private_description": "Make this tournament private (only seen to admins)",
         "ranking": "Include ranking",
         "ranking_description": "Enable ranking for this tournament",
-        "team": "Tournament with teams",
-        "team_description": "Enable tournament with teams"
+        "team": "Doubles or Teams",
+        "team_description": "Enable tournament with either doubles or team matchups"
       },
       "tables": {
         "no_tables": "No tables have been assigned yet",
@@ -787,6 +794,7 @@
           "participants": "Participants",
           "timetable": "Timetable",
           "matches": "Schedule",
+          "games": "Matches",
           "tables": "Brackets",
           "view_all": "View all groups",
           "view_all_description": "Manage all tournament groups"
@@ -834,9 +842,9 @@
         },
         "add_new": "Add new",
         "no_tables": "No groups created yet",
-        "title": "Tournament Groups",
+        "title": "Tournament Classes",
         "errors": {
-          "class": "Group name is required",
+          "class": "Class name is required",
           "type": "Tournament type is required",
           "min_team_size": "Minimum team size is 2",
           "dialog_type": "Team type is required"
@@ -1107,13 +1115,27 @@
         "not_found": "No brackets found",
         "not_found_description": "We couldn't find any brackets for this tournament.",
         "refresh": "Refresh brackets"
+      },
+      "timetable": {
+        "settings": "Timetable Settings",
+        "start_date": "Class start date",
+        "start_time": "Class start time",
+        "match_duration": "Average match duration",
+        "match_duration_desc": "Expected time per match (5-120 minutes)",
+        "break_duration": "Break between matches",
+        "break_duration_desc": "Buffer time between matches (0-60 minutes)",
+        "generate": "Generate Timetable",
+        "reset": "Reset",
+        "generating": "Generating...",
+        "timetabled_tournament": "Timetabled Tournament",
+        "timetabled_tournament_desc": "Enable to show timetable settings and schedule matches automatically"
       }
     },
     "blogs": {
       "title": "Blogs",
       "description": "Manage blogs",
       "add_new": "New Post",
-      "delete": "Delete a blog",
+      "delete": "Delete post",
       "text": "Start writing a blog",
       "search": "Search for blogs...",
       "status_published": "Published",
