translations for dynamic group

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -788,6 +788,12 @@
         "free": "Free",
         "empty_placeholder": "Table available for matches"
       },
+      "participants": {
+        "round_robin": "Round Robin Participants",
+        "double_elimination": "Double Elimination Participants", 
+        "round_robin_content": "Round Robin participants content will go here...",
+        "double_elimination_content": "Double Elimination participants content will go here..."
+      },
       "groups": {
         "layout": {
           "info": "Info",
