introduced fix for doubles participant count

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -789,10 +789,11 @@
         "empty_placeholder": "Table available for matches"
       },
       "participants": {
-        "round_robin": "Round Robin Participants",
-        "double_elimination": "Double Elimination Participants", 
-        "round_robin_content": "Round Robin participants content will go here...",
-        "double_elimination_content": "Double Elimination participants content will go here..."
+        "round_robin": "Group Draw Participants",
+        "double_elimination": "Main Draw Participants", 
+        "round_robin_content": "Participants added here will be split into round robin subgroups.",
+        "double_elimination_content": "Participants visible here will be playing in the main bracket.",
+        "players": "unpaired players"
       },
       "groups": {
         "layout": {
