--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -830,7 +830,8 @@
         "round_robin": "Alagruppides osalejad",
         "double_elimination": "Põhitabelis osalejad",
         "round_robin_content": "Siia lisatud mängijad jaotatakse alagruppide vahel ning igast alagrupist pääseb teatud arv mängijaid põhitabelisse.",
-        "double_elimination_content": "Siia lisatud mängijad osalevad põhitabeliturniiris."
+        "double_elimination_content": "Siia lisatud mängijad osalevad põhitabeliturniiris.",
+        "players": "paaripanemata mängijat"
       },
       "groups": {
         "layout": {
